@startuml
'https://plantuml.com/class-diagram


SchoolDto <|-- StatusEnum
SchoolDto <|-- School
class SchoolDto{
    String name;
    StatusEnum statusEnum;
    + static SchoolDto fromEntity(School school);
}

School <|-- StatusEnum
class School {
    private Long id;
    private String name;
    private StatusEnum statusEnum;

    + School gets();
    + void sets();


}

enum StatusEnum {
    ACTIVATE("activate"),
    DISABLED("disabled");
    - final String status;
    StatusEnum(String status);
    + String getStatus();
}

SchoolRepository <|-- School
interface SchoolRepository extends JpaRepository<School, Long> {
    Optional<School> findByName(String name);
}

SchoolServiceImplementation <|-- SchoolRepository
SchoolServiceImplementation <|-- SchoolDto
class SchoolServiceImplementation implements SchoolService {
    - final SchoolRepository schoolRepository;

    + SchoolServiceImplementation(SchoolRepository schoolRepository);
    + SchoolDto createSchool(SchoolDto schoolDto);
    + ResponseEntity<?> getAllSchool();
    + ResponseEntity<?> deleteSchool(Long schoolId);
    + ResponseEntity<?> updateSchool(Long schoolId, SchoolDto schoolDto);
    + ResponseEntity<?> getSchoolById(Long schoolId);
}


SchoolService <|-- SchoolDto
interface SchoolService {
    SchoolDto createSchool(SchoolDto schoolDto);
    ResponseEntity<?> getAllSchool();
    ResponseEntity<?> deleteSchool(Long schoolId);
    ResponseEntity<?> updateSchool(Long schoolId, SchoolDto schoolDto);
    ResponseEntity<?> getSchoolById(Long schoolId);
}


SchoolController <|-- SchoolService
class SchoolController {
    - final SchoolService schoolService;

    + SchoolController(SchoolService schoolService);
    + SchoolDto createSchool(@RequestBody SchoolDto schoolDto);
    + ResponseEntity<?> listSchool();
    + ResponseEntity<?> deleteScholl(@PathVariable Long schoolId);
    + ResponseEntity<?> updateSchool(@PathVariable Long schoolId, @Validated @RequestBody SchoolDto schoolDto);
    + ResponseEntity<?> getSchoolById(@PathVariable Long schoolId);
}

@enduml